[package]
name = "safecrate"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to safely open, build, and inspect untrusted source code in isolated Docker containers, protecting your system from potentially malicious projects."
license = "MIT"
authors = ["Charly <github.womankind044@passinbox.com>"]
repository = "https://github.com/0xsecaas/safecrate"
readme = "README.md"
keywords = ["security", "sandbox", "docker", "isolation", "dev-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
